--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
   "version": 2,
   "functions": {
-    "api/[...path].js": {
+    "api/categories.js": {
+      "maxDuration": 30
+    },
+    "api/data.js": {
+      "maxDuration": 30
+    },
+    "api/items.js": {
       "maxDuration": 30
     }
   }
